Refactor: JDK 17로 버전 변경에 따른 리팩토링 진행