@@ -97,7 +97,7 @@ public class HelperFacadeIntegrationTest extends IntegrationTest {
             int after = profiles.size();
             assertThat(after - before).isEqualTo(1);
 
-            var saved = profiles.getLast();
+            var saved = profiles.get(profiles.size() - 1);
             assertThat(saved.getShortBio()).isEqualTo("부모님처럼 모시겠습니다!");
             assertThat(saved.getArea()).isEqualTo(Area.SEOUL);
             assertThat(saved.getHelperProfileImage().getImageMeta().getContentType()).isEqualTo("image/png");
